--- a/css/style.css
+++ b/css/style.css
@@ -141,9 +141,9 @@ main .form-main{
 button {
     width: 120px;
     height: 35px;
-    background-color: #02d9ff00;
-    color: #000;
-    border: 1px solid #000;
+    background-color: #ffffff;
+    color: rgb(55, 55, 55);;
+    border: 1px solid rgb(0, 0, 0);
     font-weight: 700;
     border-radius: 50px;
     align-items: center;
@@ -223,6 +223,7 @@ main .list-cadastro table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
     padding: 5px;
+    color: white;
   }
   main .list-cadastro th {
     background-color: black;
